# support-bot

./: .gitignore  Error_multiple_camera.txt  README.md  pyproject.toml
data/processed/: chunks.jsonl  cleaned.jsonl
data/raw/amfi/: articles.jsonl
data/raw/sebi/: pdf_manifest.jsonl
data/raw/sebi/parsed/: sebi_parsed.jsonl
data/raw/zerodha/: articles.jsonl
data/vectordb/5bdaa221-d183-4878-a28f-faa31d332224/: index_metadata.pickle
notebooks/: embed_colab.ipynb
src/embed/: embed.py  vector_store.py
src/ingestion/: chunk.py  clean.py  parse_sebi_pdfs.py  scrape_amfi.py  scrape_sebi.py  scrape_zerodha.py
src/retieval/: retriever.py
