[project]
name = "support-bot"
version = "0.1.0"
description = "End-to-end LLM support bot"
authors = [
    {name = "Vishal150494",email = "vchegde.hegde@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
