[project]
name = "support-bot"
version = "0.1.0"
description = "End-to-end LLM support bot"
authors = [
    {name = "Vishal150494",email = "vchegde.hegde@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pdfplumber (>=0.11.10,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
